--- a/package.json
+++ b/package.json
@@ -7,24 +7,30 @@
     "start": "node server.js"
   },
   "dependencies": {
-    "isomorphic-fetch": "^2.1.1",
-    "material-ui": "^0.10.4",
-    "react": "^0.13.3",
-    "react-redux": "^1.0.0",
-    "redux": "^1.0.1",
-    "redux-thunk": "^0.1.0"
+    "isomorphic-fetch": "^2.2.0",
+    "material-ui": "^0.13.0",
+    "react": "^0.14.0",
+    "react-dom": "^0.14.0",
+    "react-redux": "^4.0.0",
+    "redux": "^3.0.0",
+    "redux-thunk": "^1.0.0",
+    "react-tap-event-plugin": "^0.2.1",
+    "react-addons-transition-group": "^0.14.0",
+    "react-addons-update": "^0.14.0",
+    "react-addons-create-fragment": "^0.14.0",
+    "react-addons-pure-render-mixin": "^0.14.0"
   },
   "devDependencies": {
-    "babel-core": "^5.5.8",
-    "babel-loader": "^5.1.4",
-    "css-loader": "^0.16.0",
+    "babel-core": "^5.8.30",
+    "babel-loader": "^5.3.2",
+    "css-loader": "^0.21.0",
     "file-loader": "^0.8.4",
-    "node-sass": "^3.2.0",
-    "react-hot-loader": "^1.2.9",
-    "sass-loader": "^2.0.1",
-    "style-loader": "^0.12.3",
+    "node-sass": "^3.4.1",
+    "react-hot-loader": "^1.3.0",
+    "sass-loader": "^3.1.1",
+    "style-loader": "^0.13.0",
     "url-loader": "^0.5.6",
-    "webpack": "^1.9.11",
-    "webpack-dev-server": "^1.9.0"
+    "webpack": "^1.12.2",
+    "webpack-dev-server": "^1.12.1"
   }
 }
