--- a/package.json
+++ b/package.json
@@ -7,18 +7,21 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "history": "^1.13.0",
     "isomorphic-fetch": "^2.2.0",
     "material-ui": "^0.13.0",
     "react": "^0.14.0",
-    "react-dom": "^0.14.0",
-    "react-redux": "^4.0.0",
-    "redux": "^3.0.0",
-    "redux-thunk": "^1.0.0",
-    "react-tap-event-plugin": "^0.2.1",
+    "react-addons-create-fragment": "^0.14.0",
+    "react-addons-pure-render-mixin": "^0.14.0",
     "react-addons-transition-group": "^0.14.0",
     "react-addons-update": "^0.14.0",
-    "react-addons-create-fragment": "^0.14.0",
-    "react-addons-pure-render-mixin": "^0.14.0"
+    "react-dom": "^0.14.0",
+    "react-redux": "^4.0.0",
+    "react-router": "^1.0.0-rc3",
+    "react-tap-event-plugin": "^0.2.1",
+    "redux": "^3.0.0",
+    "redux-router": "^1.0.0-beta3",
+    "redux-thunk": "^1.0.0"
   },
   "devDependencies": {
     "babel-core": "^5.8.30",
